--- a/gathering-cats/border-crossing/index.html
+++ b/gathering-cats/border-crossing/index.html
@@ -69,7 +69,7 @@
 
     <div class="fade-in text-flowX" style="position:fixed; left:0px; right:0px; 
     text-align:center; margin-top:60px; color:#fff; font-size:24px">
-        border crossing
+        chapter x: <span style="font-weight:800; opacity:1">border crossing</span>
 
         
         <div id="play-button" style="font-size: 48px; margin-top:50px; margin-left:2px">
@@ -89,7 +89,7 @@
 <a href="../../" class="returnhome">Audioscape</a>
 <h1>Border Crossing</h1><!-- Acts of Nature -->
 
-<p>Michael crouched close to the wall of a old gas station and pressed the pay-phone to his ear a few miles from the Lebanese border.  His two children were curled up comfortably in bed a thousand miles away, listening intently to his every word. He picked up on the story he had been weaving when they were last together.</p>
+<p>Michael crouched close to the wall of the old gas station and pressed the pay-phone to his ear. Here, a few miles from the Lebanese border, while his two children were curled up in bed a thousand miles away, listening intently to his every word. He picked up on the story of Moki and Coda he had been weaving when they were last together.</p>
 
 <p>"Perched high on a limb overlooking the forest, Moki
   had arrived early before sunrise, to watch the other children coming up from
