--- a/gathering-cats/border-crossing/index.html
+++ b/gathering-cats/border-crossing/index.html
@@ -69,7 +69,7 @@
 
     <div class="fade-in text-flowX" style="position:fixed; left:0px; right:0px; 
     text-align:center; margin-top:60px; color:#fff; font-size:24px">
-        chapter x: <span style="font-weight:800; opacity:1">border crossing</span>
+        <span style="font-weight:800; opacity:1">border crossing</span>
 
         
         <div id="play-button" style="font-size: 48px; margin-top:50px; margin-left:2px">
@@ -91,9 +91,7 @@
 
 <p>Michael crouched close to the wall of the old gas station and pressed the pay-phone to his ear. Here, a few miles from the Lebanese border, while his two children were curled up in bed a thousand miles away, listening intently to his every word. He picked up on the story of Moki and Coda he had been weaving when they were last together.</p>
 
-<p>"Perched high on a limb overlooking the forest, Moki
-  had arrived early before sunrise, to watch the other children coming up from
-  the village below.  As they ascended the path, each was collecting the hollow gold and green chrysalises of the monarch butterflies that had emerged in the morning light.&quot;</p>
+<p>"Perched high on a limb overlooking the forest, Moki had arrived early before sunrise, to watch the other children coming up from the village below.  As they ascended the path, each was collecting the hollow gold and green chrysalises of the monarch butterflies that had emerged in the morning light.&quot;</p>
 
 <p>&quot;There was one girl in particular who stood out to Moki. Her name was Coda, and she was the most beautiful of the butterfly girls, at least to Moki. Her
 smile, when it came, was tender and true."</p>
