--- a/gathering-cats/border-crossing/index.html
+++ b/gathering-cats/border-crossing/index.html
@@ -89,12 +89,11 @@
 <a href="../../" class="returnhome">Audioscape</a>
 <h1>Border Crossing</h1><!-- Acts of Nature -->
 
-<p>Michael crouched close to the wall of the old gas station and pressed the pay-phone to his ear. Here, a few miles from the Lebanese border, while his two children were curled up in bed a thousand miles away, listening intently to his every word. He picked up on the story of Moki and Coda he had been weaving when they were last together.</p>
+<p>Michael crouched close to the wall of the old gas station and pressed the pay-phone to his ear.  Listening intently to his every word, his two children were curled up in bed a thousand miles away. Here, a few miles from the Lebanese border, he picked up on the story of Moki and Coda. He had been telling it to the kids when they were last together. Now he viualized the forest trees to distract himself from the perils of the road ahead.</p>
 
-<p>"Perched high on a limb overlooking the forest, Moki had arrived early before sunrise, to watch the other children coming up from the village below.  As they ascended the path, each was collecting the hollow gold and green chrysalises of the monarch butterflies that had emerged in the morning light.&quot;</p>
+<p>"Perched high on a limb overlooking the trail," he began, "Moki had arrived early before sunrise and could see the other children coming up from the village below.  As they ascended the path, each was collecting the hollow gold and green chrysalises of the monarch butterflies that had emerged in the morning light.&quot;</p>
 
-<p>&quot;There was one girl in particular who stood out to Moki. Her name was Coda, and she was the most beautiful of the butterfly girls, at least to Moki. Her
-smile, when it came, was tender and true."</p>
+<p>&quot;There was one girl in particular who stood out to Moki. Her name was Coda, and she was the most beautiful of the butterfly girls, at least to Moki. Her smile, when it came, was tender and true."</p>
 
 <p>And so began their favorite story, set in the hills of Central America over 11,000 years ago, two tribes, the Jaguar People of the forest and the Bird People from the north, who came together each spring to celebrate the departure of the monarchs.</p>
 
@@ -197,6 +196,7 @@ hopefully lead him to one the world's foremost mathematicians, Oseph Easthay. A 
 <p style="display:none;" class="local"><a href="../../spring/finibus-tour/">Finibus Tour - How Michael met Mitch</a></p>
 
 <p style="display:none;" class="local"><a href="../../winter/challenge/">The Cast - Winter Challenge - Michael tussles with David</a></p>
+<br>
 
 <a href="../../">&copy; 2021 Audioscape</a><br><br>
 
