--- a/edge-of-the-world.html
+++ b/edge-of-the-world.html
@@ -22,11 +22,15 @@
 <script type="text/javascript" src="https://neighborhood.org/localsite/js/navigation.js"></script>
 
 <!-- video auto-play in Chrome requires starting with plyr audio off. -->
+
+<!--
 <link type="text/css" rel="stylesheet" href="https://neighborhood.org/localsite/css/bootstrap.darkly.min.css">
+-->
+
 <link rel="stylesheet" type="text/css" href="./css/all.css" />
 
 </head>
-<body style="margin:0px; background:#000">
+<body style="margin:0px; backgroundX:#000">
 
 <div class="plyr__video-embed" id="player">
     <div id="vidCover">
@@ -228,7 +232,7 @@ $(document).on('click', '#vidCover', function () {
 <br>
 
 
-<div class="container">
+<div class="containerX">
 <div class="content">
 
 <div style="float:right">
@@ -264,11 +268,11 @@ section {
 
 <div class="audioscape">
 <p>
-Luci and Moog gave eachother the look. "Let's amp this up!" Moog yelled as dove head first and landing sliding acrosss the packed snow, snagging the puck and swinging hard to direct it up and over the kids sticks. They weren't going to let another easy score get by them. Luci, flicked her sticka and sent it flying down the frozen court with a swooping gesture toward the opposite goal. Blades hummed with bursts of acceleration as Jill and her other teammates applied a series of air slams, jumping off Rick's back to intercept and move it back down the court to score and tie the game. The rules were no contact with the flying puck. Its sensors responded to the gestures and intent of each player. Mesh over the blades protected hands from the rotors during occasional finger glances, which also incurred a one-point penalty. 
+Luci and Moog gave eachother the look.  Moog yelled "Let's amp this up!" as dove head first, sliding acrosss the packed snow, his stick binding with the overhead puck, which turned sharply as he swung hard and directed it up and over the kids sticks. They weren't going to let another easy score get by them, hopefuly. Passing to his fellow instructor Luci, she flicked her stick with a swooping gesture toward the opposite goal that sent the drone flying further and faster down the frozen court. Blades hummed with bursts of acceleration, Jill and her other teammates applied a series of air slams, with Laura jumping off Rick's back to intercept and move it back down the court to score again and tie the game. The rules were no contact with the flying puck. Its sensors responded to the gestures and intent of each player. Protective mesh over the whirling blades kept hands from the rotors during finger glances. Touching the puck incurred a one-point penalty, but the newer tech made contact increasingly rare.
 </p>
 
 <p>
-The puck's response time was fast. In fact, it was almost impossible to actually hit if you tried because it anticipated your every movement using a network connected to your EEG rig and the rigs of everyone around you. Using a combination of your arm and your EEG headset input, you could swing your arm one way, while simultaneously "telling" the puck to fly in the other direction using your eye movement to outmaneuver another player. When two player intents collided, the puck often shot straight up like a magnet flipping out of a field.
+The puck's response time was fast. In fact, it was almost impossible to hit if you actually tried because it anticipated your every movement using a network connected to your EEG rig and the rigs of everyone around you. Using a combination of your arm and your EEG headset input, you could swing your arm one way, while simultaneously "telling" the puck to fly in the other direction using your eye movement to outmaneuver another player. When two player intents collided, the puck often shot straight up like a magnet flipping out of a field.
 </p>
 
 <p>
@@ -427,9 +431,7 @@ One of the surviving MOND theories is MOG, a theory of gravity with non-local ef
 
 <p>One of the ingredients in Verlinde's theory is an adaptation of the holographic principle, introduced by his tutor Gerard 't Hooft (Nobel Prize 1999, Utrecht University) and Leonard Susskind (Stanford University). According to the holographic principle, all the information in the entire universe can be described on a giant imaginary sphere around it. Verlinde now shows that this idea is not quite correct — part of the information in our universe is contained in space itself.</p>
 
-<p>This extra information is required to describe that other dark component of the universe: Dark energy, which is believed to be responsible for the accelerated expansion of the universe. As Verlinde showed in his 2010 work, ordinary gravity can be encoded using the information on the imaginary sphere around the universe.</p>
-
-<p>Taking into account the effects of this additional information of ordinary matter within the sphere, 
+<p>This extra information is required to describe that other dark component of the universe: Dark energy, which is believed to be responsible for the accelerated expansion of the universe. As Verlinde showed in his 2010 work, ordinary gravity can be encoded using the information on the imaginary sphere around the universe. Taking into account the effects of this additional information of ordinary matter within the sphere, 
 Verlinde comes to a stunning conclusion, <i>the result of the additional information in the bulk of space is a force that nicely matches that attributed to dark matter</i>.</p>
 
 <p>Source: <a href="https://phys.org/news/2016-11-theory-gravity-dark.html">New theory of gravity might explain dark matter (2016)</a></p>
