--- a/spring/finibus-tour/index.html
+++ b/spring/finibus-tour/index.html
@@ -89,7 +89,7 @@
 
         
         <div id="play-button" style="font-size: 48px; margin-top:50px; margin-left:2px">
-        <a href="#location">▶️</a>
+        <a href="#go">▶️</a>
         </div>
     </div>
 </div>
@@ -106,7 +106,7 @@
 	<div class="content">
 
 		<!--a href="../../" class="returnhome">TeVeS 1.5</a-->
-		<a href="../../" class="returnhome">Tar and Steel</a>
+		<a href="../../gathering-cats/unwinding/" class="returnhome">Tar and Steel</a>
 
 	
 
@@ -147,7 +147,7 @@ He'd down a quart of whiskey and strum out the most beautiful chord combinations
 <p>Poor Toby had a huge goose bump on the top of his head, I mean it looked like he'd been hit by the biggest cartoon baseball bat Fred Flintstone ever wielded, but he never had it checked out. Toby simply grew his hair long and nightly downed a quart of whiskey while he played the most beautiful guitar chords you'd ever heard.</p>
 -->
 
-<p>Some nights we'd hide in the stacks and sneak into the secular antiquities section of the library to get the really old classical music books - manuscripts lined with gold, some scribed by monks over 600 years ago.  Toby would carefully open the pages while he sipped his bourban, warming up by playing ancient scales that created a sound so sweet to the ear as he began to give life to songs that had not seen the light of day since the middle&nbsp;ages.</p>
+<p>Some nights we'd hide in the book stacks and sneak into the secular antiquities section of the library to get the really old classical music books - manuscripts lined with gold, some scribed by monks over 600 years ago.  Toby would carefully open the pages while he sipped his bourban, warming up by playing ancient scales that created a sound so sweet to the ear as he began to give life to songs that had not seen the light of day since the middle&nbsp;ages.</p>
 
 <p>I guess one of the tunes must have stuck in my head, because when I strummed it out as a background track for the Finibus tour, I had no idea where it came from. Toby pointed out in his notebook, "It's this one, section 1.10.32-3 from the Epicurius codex based on Cicero." He'd been transcribing the musical notes that accompanied an old Italian epic poem. We ended up calling the song Epicurean Delight, and it had, shall we say, a certain addictive quality which drew out our friends to dance under the stars on the open porch that cool spring night.</p>
 
@@ -203,7 +203,9 @@ Opening Act - Liam with Easy Big Fella
 
     <a href="/audioscape/winter/fueled-by-combustion">Fueled by Combustion</a></p>
 </div>
-<br><br>
+<br>
+
+<br><a href="../../">&copy; 2021 Audioscape</a><br><br>
 
 </div>
 </div>
