--- a/gathering-cats/border-crossing/index.html
+++ b/gathering-cats/border-crossing/index.html
@@ -196,9 +196,8 @@ hopefully lead him to one the world's foremost mathematicians, Oseph Easthay. A 
 <p style="display:none;" class="local"><a href="../../spring/finibus-tour/">Finibus Tour - How Michael met Mitch</a></p>
 
 <p style="display:none;" class="local"><a href="../../winter/challenge/">The Cast - Winter Challenge - Michael tussles with David</a></p>
-<br>
 
-<a href="../../">&copy; 2021 Audioscape</a><br><br>
+<br><a href="../../">&copy; 2021 Audioscape</a><br><br>
 
 </div>
 
