--- a/gathering-cats/border-crossing/index.html
+++ b/gathering-cats/border-crossing/index.html
@@ -45,10 +45,16 @@
     $(window).scroll(function(){$(".herocenter").css("opacity", 1 - $(window).scrollTop() / 200);});
   </script>
   <style type='text/css'>
-      #menuHolder {display:none;}
-      .container {
-        background-color: rgba(35, 35, 35, .85);
-      }
+    .showMenu {
+      display:none;
+    }
+    #footer {
+      display:none;
+    }
+    #menuHolder {display:none;}
+    .container {
+      background-color: rgba(35, 35, 35, .85);
+    }
   </style>
   <!-- /menu load -->
 
