--- a/edge-of-the-world.html
+++ b/edge-of-the-world.html
@@ -237,7 +237,7 @@ $(document).on('click', '#vidCover', function () {
 
 <div style="float:right">
   <link type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <script type="text/javascript" src="https://audioscape.github.io/audio/js/audio.js"></script>
+  <script type="text/javascript" src="js/audio.js"></script>
   <div id="audioscape-output-control"></div>
 </div>
 
