--- a/gathering-cats/unwinding/index.html
+++ b/gathering-cats/unwinding/index.html
@@ -106,11 +106,15 @@
 
 	<div class="content">
 
-		<!--a href="../../" class="returnhome">TeVeS 1.5</a-->
+		<div style="float:right">
+		  <link type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+		  <script type="text/javascript" src="../../js/audio.js"></script>
+		  <div id="audioscape-output-control"></div>
+		</div>
+
 		<a href="../../" class="returnhome">Tar and Steel</a>
 
 		<h1>To each their own</h1>
-
 
 		<div style="clear:both"></div>
 
@@ -147,27 +151,30 @@
 	In Xanadu did Kubla Khan a stately pleasure-dome decree.
 -->
 
-<p>We were worn, like ragged sandals saved way too long after the Dead were long dead.  Winding home from another crazy-busy Friday night of serving cheap beer on sticky floors, I was looking forward to curling up with a good book to lull my mind to sleep. Steven arrived home shortly after I did.  He parked his jeep in the back. Hugging him, I reached around to grab a bite from the big bag of zucinni bread from the deli next door, he'd traded two dozen thick slices and they'd thrown in a big jar of fig jam for tomorrow's breakfast.</p>
+<div class="audioscape">
 
-<p>Steve and I had been dating off and on for most of the previous five years.  He was both a mentor, an employer and a security blanket.  He'd taken over the pizzeria shortly after his father died, rescuing it from oblivion, while I rescued him from the loss of his dad. We were good for eachother, but not bound at the hip.</p>
+	<p>We were worn, like ragged sandals saved way too long after the Dead were long dead.  Winding home from another crazy-busy Friday night of serving cheap beer on sticky floors, I was looking forward to curling up with a good book to lull my mind to sleep. Steven arrived home shortly after I did.  He parked his jeep in the back. Hugging him, I reached around to grab a bite from the big bag of zucinni bread from the deli next door, he'd traded two dozen thick slices and they'd thrown in a big jar of fig jam for tomorrow's breakfast.</p>
 
-<p>There's one book I've been looking forward to every night this week, The Artisan. Funny thing though, I usually fall asleep after only a few pages.</p>
+	<p>Steve and I had been dating off and on for most of the previous five years.  He was both a mentor, an employer and a security blanket.  He'd taken over the pizzeria shortly after his father died, rescuing it from oblivion, while I rescued him from the loss of his dad. We were good for eachother, but not bound at the hip.</p>
 
-<p>I flip to where I left off.</p>
+	<p>There's one book I've been looking forward to every night this week, The Artisan. Funny thing though, I usually fall asleep after only a few pages.</p>
 
-<p>Before long I'm yawning, I'm already drifting. But that's why I came here, for the dreams that soon follow.</p>
+	<p>I flip to where I left off.</p>
 
-
-<p>Continue: <a href="../../the-artisan/">The Artisan</a></p>
-
-<p><hr /><br /></p>
-
-<p><a href="/audioscape/img/items/bookmarks/bookmark-crop.jpg"><img src="/audioscape/img/items/bookmarks/bookmark-crop.jpg" style="width:100%;max-width:100px;float:left; margin-right:30px" alt="" /></a></p>
+	<p>Before long I'm yawning, I'm already drifting. But that's why I came here, for the dreams that soon follow.</p>
 
 
-<p>I arrive at work the next day around noon, grab my old black sneakers from the cubby and start cleaning up from the night before. A drawing falls out of a paper bag holding a manuscript that my friend Jen gave me two days prior. The black lines form a skull pattern on a tan piece of paper. I slide it into my back pocket, I'm moving quickly to get to work.</p>
+	<p>Continue: <a href="../../the-artisan/">The Artisan</a></p>
 
-<p>Another busy night.  The last customer gone. Nipsy is on the counter, her paw jerking back and forth as she tries desperately to unsnarl the ball of yarn caught in her claws. The tips are good, so I don't mind, at least until the winter is over back home.  Then I need to get myself organized, turn over a new leaf.</p>
+	<p><hr /><br /></p>
+
+	<p><a href="/audioscape/img/items/bookmarks/bookmark-crop.jpg"><img src="/audioscape/img/items/bookmarks/bookmark-crop.jpg" style="width:100%;max-width:100px;float:left; margin-right:30px" alt="" /></a></p>
+
+
+	<p>I arrive at work the next day around noon, grab my old black sneakers from the cubby and start cleaning up from the night before. A drawing falls out of a paper bag holding a manuscript that my friend Jen gave me two days prior. The black lines form a skull pattern on a tan piece of paper. I slide it into my back pocket, I'm moving quickly to get to work.</p>
+
+	<p>Another busy night.  The last customer gone. Nipsy is on the counter, her paw jerking back and forth as she tries desperately to unsnarl the ball of yarn caught in her claws. The tips are good, so I don't mind, at least until the winter is over back home.  Then I need to get myself organized, turn over a new leaf.</p>
+</div>
 
 <!--
 <p>
