--- a/play/index.html
+++ b/play/index.html
@@ -192,6 +192,7 @@ Show popup with errors details on glenwoodpark.comShow error notification icon o
 
 </body>
 
+<link type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 <script type="text/javascript" src="../js/audio.js"></script>
 <script type="text/javascript" src="js/posts.js"></script>
 
