--- a/gathering-cats/unwinding/index.html
+++ b/gathering-cats/unwinding/index.html
@@ -163,17 +163,20 @@
 
 	<p>Before long I'm yawning, I'm already drifting. But that's why I came here, for the dreams that soon follow.</p>
 
+</div>
 
 	<p>Continue: <a href="../../the-artisan/">The Artisan</a></p>
 
 	<p><hr /><br /></p>
 
+<div class="audioscape">
+
 	<p><a href="/audioscape/img/items/bookmarks/bookmark-crop.jpg"><img src="/audioscape/img/items/bookmarks/bookmark-crop.jpg" style="width:100%;max-width:100px;float:left; margin-right:30px" alt="" /></a></p>
 
 
-	<p>I arrive at work the next day around noon, grab my old black sneakers from the cubby and start cleaning up from the night before. A drawing falls out of a paper bag holding a manuscript that my friend Jen gave me two days prior. The black lines form a skull pattern on a tan piece of paper. I slide it into my back pocket, I'm moving quickly to get to work.</p>
+	<p>I arrived at work the next day around noon, grabbed my old black sneakers from the cubby and started cleaning up from the night before. A drawing fell out of a paper bag holding screenplay my friend Jen gave me two days prior. The black lines on it formed a skull pattern. I slid it into my back pocket, moving quickly to get to work.</p>
 
-	<p>Another busy night.  The last customer gone. Nipsy is on the counter, her paw jerking back and forth as she tries desperately to unsnarl the ball of yarn caught in her claws. The tips are good, so I don't mind, at least until the winter is over back home.  Then I need to get myself organized, turn over a new leaf.</p>
+	<p>It was another very busy night.  With the last customer gone, Nipsy was up on the counter. Her paw jerked back and forth as she tried desperately to unsnarl a ball of yarn caught in her claws. The tips were good, so I don't mind the late hours, at least until the winter is over back home.  Then I'll need to get myself organized, turn over a new leaf.</p>
 </div>
 
 <!--
