--- a/gathering-cats/unwinding/index.html
+++ b/gathering-cats/unwinding/index.html
@@ -153,7 +153,7 @@
 
 <div class="audioscape">
 
-	<p>We were worn, like ragged sandals saved way too long after the Dead were long dead.  Winding home from another crazy-busy Friday night of serving cheap beer on sticky floors, I was looking forward to curling up with a good book to lull my mind to sleep. Steven arrived home shortly after I did.  He parked his jeep in the back. Hugging him, I reached around to grab a bite from the big bag of zucinni bread from the deli next door, he'd traded two dozen thick slices and they'd thrown in a big jar of fig jam for tomorrow's breakfast.</p>
+	<p>We were worn, like ragged keepsake sandals saved after the Dead were long dead.  Winding home from another crazy-busy Friday night of serving cheap beer on sticky floors, I was looking forward to curling up with a good book to lull my mind to sleep. Steven arrived home shortly after I did.  He parked his jeep in the back. Hugging him, I reached around to grab a bite from the big bag of zucinni bread from the deli next door, he'd traded two dozen thick slices and they'd thrown in a big jar of fig jam for tomorrow's breakfast.</p>
 
 	<p>Steve and I had been dating off and on for most of the previous five years.  He was both a mentor, an employer and a security blanket.  He'd taken over the pizzeria shortly after his father died, rescuing it from oblivion, while I rescued him from the loss of his dad. We were good for eachother, but not bound at the hip.</p>
 
@@ -176,7 +176,7 @@
 
 	<p>I arrived at work the next day around noon, grabbed my old black sneakers from the cubby and started cleaning up from the night before. A drawing fell out of a paper bag holding screenplay my friend Jen gave me two days prior. The black lines on it formed a skull pattern. I slid it into my back pocket, moving quickly to get to work.</p>
 
-	<p>It was another very busy night.  With the last customer gone, Nipsy was up on the counter. Her paw jerked back and forth as she tried desperately to unsnarl a ball of yarn caught in her claws. The tips were good, so I don't mind the late hours, at least until the winter is over back home.  Then I'll need to get myself organized, turn over a new leaf.</p>
+	<p>It was another busy night.  With the last customer gone, Nipsy was up on the counter. Her paw jerked back and forth as she tried desperately to unsnarl a ball of yarn caught in her claws. The tips were good, so I don't mind the late hours, at least until the winter is over back home.  Then I'll need to get myself organized, turn over a new leaf.</p>
 </div>
 
 <!--
