--- a/gathering-cats/unwinding/index.html
+++ b/gathering-cats/unwinding/index.html
@@ -145,17 +145,17 @@
 
 
 
+
+
+<div class="audioscape">
 <p>"There can be no pleasure like the one unknown." - Aurora (Audry) Steel, that's me.</p>
 
 <!--
 	In Xanadu did Kubla Khan a stately pleasure-dome decree.
 -->
+	<p>Winding home from another crazy-busy Friday night of lugging cheap beer across sticky floors, my whole buddy was worn out. I was looking forward to curling up with a good book to lull my mind to sleep. Steven arrived home shortly after I did.  He parked his jeep in the back. Hugging him at the door, I reached around to grab a bite from the big bag of cinnamon bread from the deli next door, he'd traded two dozen thick slices and they'd thrown in a big jar of fig jam for tomorrow's breakfast.</p>
 
-<div class="audioscape">
-
-	<p>We were worn, like ragged keepsake sandals saved after the Dead were long dead.  Winding home from another crazy-busy Friday night of serving cheap beer on sticky floors, I was looking forward to curling up with a good book to lull my mind to sleep. Steven arrived home shortly after I did.  He parked his jeep in the back. Hugging him, I reached around to grab a bite from the big bag of zucinni bread from the deli next door, he'd traded two dozen thick slices and they'd thrown in a big jar of fig jam for tomorrow's breakfast.</p>
-
-	<p>Steve and I had been dating off and on for most of the previous five years.  He was both a mentor, an employer and a security blanket.  He'd taken over the pizzeria shortly after his father died, rescuing it from oblivion, while I rescued him from the loss of his dad. We were good for eachother, but not bound at the hip.</p>
+	<p>Steve and I had been dating off and on for most of the previous five years.  He was both a mentor, an employer and a security blanket.  He'd taken over the pizzeria shortly after his dad died, rescuing it from oblivion, while I rescued him from the loss of his father. We were good for eachother, but not bound at the hip.</p>
 
 	<p>There's one book I've been looking forward to every night this week, The Artisan. Funny thing though, I usually fall asleep after only a few pages.</p>
 
@@ -174,9 +174,9 @@
 	<p><a href="/audioscape/img/items/bookmarks/bookmark-crop.jpg"><img src="/audioscape/img/items/bookmarks/bookmark-crop.jpg" style="width:100%;max-width:100px;float:left; margin-right:30px" alt="" /></a></p>
 
 
-	<p>I arrived at work the next day around noon, grabbed my old black sneakers from the cubby and started cleaning up from the night before. A drawing fell out of a paper bag holding screenplay my friend Jen gave me two days prior. The black lines on it formed a skull pattern. I slid it into my back pocket, moving quickly to get to work.</p>
+	<p>I arrived at work the next day around noon, grabbed my old black sneakers from the cubby and started cleaning up from the night before. A drawing fell out of a paper bag holding screenplay my friend Jen gave me two days prior. The black lines on it formed a cool pattern. I slid it into my back pocket, moving quickly to get to work.</p>
 
-	<p>It was another busy night.  With the last customer gone, Nipsy was up on the counter. Her paw jerked back and forth as she tried desperately to unsnarl a ball of yarn caught in her claws. The tips were good, so I don't mind the late hours, at least until the winter is over back home.  Then I'll need to get myself organized, turn over a new leaf.</p>
+	<p>It was another busy night.  With the last customer gone, Nipsy was up on the counter. Her paw jerked back and forth as she tried desperately to unsnarl a ball of yarn caught in her claws. The tips were good, so I don't mind the late hours, at least until the winter is over back home.  Then I'll need to get myself organized, and turn over a new leaf.</p>
 </div>
 
 <!--
