--- a/gathering-cats/unwinding/index.html
+++ b/gathering-cats/unwinding/index.html
@@ -174,7 +174,7 @@
 	<p><a href="/audioscape/img/items/bookmarks/bookmark-crop.jpg"><img src="/audioscape/img/items/bookmarks/bookmark-crop.jpg" style="width:100%;max-width:100px;float:left; margin-right:30px" alt="" /></a></p>
 
 
-	<p>I arrived at work the next day around noon, grabbed my old black sneakers from the cubby and started cleaning up from the night before. A drawing fell out of a paper bag holding screenplay my friend Jen gave me two days prior. The black lines on it formed a cool pattern. I slid it into my back pocket, moving quickly to get to work.</p>
+	<p>I arrived at work the next day around noon, grabbed my old black sneakers from the cubby and started cleaning up from the night before. A drawing fell out of a paper bag holding a screenplay my friend Jen gave me two days prior. The black lines on it formed a cool pattern. I slid it into my back pocket, moving quickly to get to work.</p>
 
 	<p>It was another busy night.  With the last customer gone, Nipsy was up on the counter. Her paw jerked back and forth as she tried desperately to unsnarl a ball of yarn caught in her claws. The tips were good, so I don't mind the late hours, at least until the winter is over back home.  Then I'll need to get myself organized, and turn over a new leaf.</p>
 </div>
