--- a/gathering-cats/unwinding/index.html
+++ b/gathering-cats/unwinding/index.html
@@ -176,7 +176,7 @@
 
 	<p>I arrived at work the next day around noon, grabbed my old black sneakers from the cubby and started cleaning up from the night before. A drawing fell out of a paper bag holding a screenplay my friend Jen gave me two days prior. The black lines on it formed a cool pattern. I slid it into my back pocket, moving quickly to get to work.</p>
 
-	<p>It was another busy night.  With the last customer gone, Nipsy was up on the counter. Her paw jerked back and forth as she tried desperately to unsnarl a ball of yarn caught in her claws. The tips were good, so I don't mind the late hours, at least until the winter is over back home.  Then I'll need to get myself organized, and turn over a new leaf.</p>
+	<p>It was another busy night.  With the last customer gone, Nipsy was up on the counter. Her paw jerked back and forth as she tried desperately to unsnarl a ball of yarn caught in her claws. The tips were good, so I didn't mind the late hours, at least until the winter is over back home.  Then I'll need to get myself organized, and turn over a new leaf.</p>
 </div>
 
 <!--
