--- a/edge-of-the-world.html
+++ b/edge-of-the-world.html
@@ -268,11 +268,14 @@ section {
 
 <div class="audioscape">
 <p>
-Luci and Moog gave eachother the look.  Moog yelled "Let's amp this up!" as he dove head first acrosss the packed snow, his stick coming close enough to the overhead puck to cause it to turn sharply as he swung hard and directed it over the kids. They weren't going to let another easy score get by them. Before the pass could make it to his fellow instructor Luci, their young opponents acted fast.  Blades hummed with bursts of acceleration, Jill and her other teammates applied a series of air slams, with Laura jumping off Rick's back to intercept and move it back down the court to score again and tie the game. The rules were no contact with the flying puck. Its sensors responded to the gestures and intent of each player. Protective mesh over the whirling blades kept hands from the rotors during finger glances. Touching the puck incurred a one-point penalty, but the newer tech made contact increasingly rare.
+Luci and Moog gave eachother the look.  Moog yelled "Let's amp this up!" as he dove head first acrosss the packed snow, his stick coming close enough to the overhead puck to cause it to turn sharply and pause. He swung hard and directed it up over the heads of the kids, but they weren't going to let another mid-level flight get by them. Before the pass could make it to Luci, their young opponents acted fast.  Jill and Jen applied a series of air slams pulling the puck downward. Then Laura propelled herself off Rick's back to intercept the puck and move it back down the court to score and tie the game.</p>
+
+<p>
+The puck's response time was fast. In fact, it was almost impossible to hit if you actually tried because it anticipated your every movement using a network connected to your EEG rig and the rigs of everyone around you. Using a combination of your arm and your EEG headset input, you could swing your arm one way, while simultaneously "telling" the puck to fly in the other direction using your eye movement to outmaneuver another player. When two player intents collided, the puck often shot straight up like a magnet flipping out of a field.  Luci gained control again and flicked her stick with a swooping gesture toward the open area nearest to IceCube 1 where Moog stood ready.
 </p>
 
 <p>
-The puck's response time was fast. In fact, it was almost impossible to hit if you actually tried because it anticipated your every movement using a network connected to your EEG rig and the rigs of everyone around you. Using a combination of your arm and your EEG headset input, you could swing your arm one way, while simultaneously "telling" the puck to fly in the other direction using your eye movement to outmaneuver another player. When two player intents collided, the puck often shot straight up like a magnet flipping out of a field.  Luci gained control again and flicked her stick with a swooping gesture toward the open area nearest to Icelab where Moog stood ready.
+The rules were no contact with the flying puck. Its sensors responded to the gestures and intent of each player. Protective mesh over the whirling blades kept hands from the rotors during finger glances. Touching the puck incurred a one-point penalty, but the newer tech made contact increasingly rare.
 </p>
 
 <p>
