--- a/gathering-cats/border-crossing/index.html
+++ b/gathering-cats/border-crossing/index.html
@@ -203,6 +203,9 @@ hopefully lead him to one the world's foremost mathematicians, Oseph Easthay. A 
 
 <p style="display:none;" class="local"><a href="../../winter/challenge/">The Cast - Winter Challenge - Michael tussles with David</a></p>
 
+
+<p><a href="../../edge-of-the-world.html">Edge of the World</a></p>
+
 <br><a href="../../">&copy; 2021 Audioscape</a><br><br>
 
 </div>
