--- a/spring/finibus-tour/index.html
+++ b/spring/finibus-tour/index.html
@@ -191,7 +191,7 @@ Opening Act - Liam with Easy Big Fella
 </div>
 
 <p>
-<a href="/audioscape/edge-of-the-world.html" parent="moog">Edge of the World</a>
+<a href="../../gathering-cats/unwinding/" parent="moog">Tar and Steel</a>
 </p>
 
 <div class="main wrapleft local" style="display:none">
