--- a/gathering-cats/unwinding/index.html
+++ b/gathering-cats/unwinding/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="Content-Type" content="text/html;">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Tar and Steel - Audioscape</title>
+<title>Tar and Steel - To each their own - Unwinding Wonder Valley - Audioscape</title>
 <!--link rel="shortcut icon" href="../img/icons/" /-->
 <style type='text/css'>
 	.clear { border-top: solid 1px #ccc;}
@@ -78,20 +78,18 @@
         <!--
         <img src="img/logo/projectmuse-text.png" style="width:100%;max-width:250px; margin-left:20px" />
         -->
-        <div class="mainTitle">
+        <div class="bookTitle">
         tar and steel
         </div>
     </div>
 
-    <div class="fade-in text-flowX" style="position:fixed; left:0px; right:0px; 
-    text-align:center; margin-top:60px; color:#fff; font-size:24px">
-        unwinding wonder valley
+    <div class="chapterTitle fade-in">
+        To each their own
 
-        <!-- Fix overlap
+        <div class="chapterSubtitle fade-in">unwinding wonder valley</div>
         <div id="play-button" style="font-size: 48px; margin-top:50px; margin-left:2px">
-        <a href="#location">▶️</a>
+        <a href="#go">▶️</a>
         </div>
-    	-->
     </div>
 </div>
 <!-- /centered text -->
