--- a/gathering-cats/unwinding/index.html
+++ b/gathering-cats/unwinding/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="Content-Type" content="text/html;">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Tar and Steel - To each their own - Unwinding Wonder Valley - Audioscape</title>
+<title>Tar and Steel - To each their own - Audioscape</title>
 <!--link rel="shortcut icon" href="../img/icons/" /-->
 <style type='text/css'>
 	.clear { border-top: solid 1px #ccc;}
@@ -85,8 +85,9 @@
 
     <div class="chapterTitle fade-in">
         To each their own
-
+        <!--
         <div class="chapterSubtitle fade-in">unwinding wonder valley</div>
+    	-->
         <div id="play-button" style="font-size: 48px; margin-top:50px; margin-left:2px">
         <a href="#go">▶️</a>
         </div>
@@ -169,12 +170,16 @@
 
 <div class="audioscape">
 
-	<p><a href="/audioscape/img/items/bookmarks/bookmark-crop.jpg"><img src="/audioscape/img/items/bookmarks/bookmark-crop.jpg" style="width:100%;max-width:100px;float:left; margin-right:30px" alt="" /></a></p>
+	<p><a href="/audioscape/img/items/bookmarks/bookmark-crop.jpg"><img src="/audioscape/img/items/bookmarks/bookmark-crop.jpg" style="width:100%;max-width:120px;float:right;margin-left:30px" alt="" /></a></p>
 
 
 	<p>I arrived at work the next day around noon, grabbed my old black sneakers from the cubby and started cleaning up from the night before. A drawing fell out of a paper bag holding a screenplay my friend Jen gave me two days prior. The black lines on it formed a cool pattern. I slid it into my back pocket, moving quickly to get to work.</p>
 
-	<p>It was another busy night.  With the last customer gone, Nipsy was up on the counter. Her paw jerked back and forth as she tried desperately to unsnarl a ball of yarn caught in her claws. The tips were good, so I didn't mind the late hours, at least until the winter is over back home.  Then I'll need to get myself organized, and turn over a new leaf.</p>
+	<p>It was another busy night.  With the last customer gone, Nipsy was up on the counter. Her paw jerked back and forth as she tried desperately to unsnarl a ball of yarn caught in her claws. The tips were good, so I didn't mind the late hours, at least until the winter is over back home.  Then I'll need to get myself organized, and turn over a new leaf.<br>
+	...</p>
+	<p>Several weeks had gone by and the busy season was drawing to a close. I was tying up loose ends online and decided to click on an ad I'd seen several times over the last few days.</p>
+	<p>The ad said, "Travel School Instructor Wanted - Remote locations, ample rewards"</p>
+
 </div>
 
 <!--
